# config.nvim

./: .gitignore  .luarc.json  Cargo.toml  base16.toml  env.bash  init.lua
after/ftplugin/: dbui.lua  info.lua  man.lua  markdown.lua  rust.lua  tex.lua
after/lsp/: efm.lua  hls.lua  kdl_lsp_crate.lua  lemminx.lua  rust_analyzer.lua  tinymist.lua  ts_ls.lua
after/queries/bash/: injections.scm
after/queries/hyprlang/: highlights.scm
after/queries/latex/: injections.scm
after/queries/markdown/: highlights.scm
after/queries/rust/: injections.scm
after/queries/typst/: highlights.scm
after/queries/yaml/: injections.scm
crates/vanadium-oxide-codegen/: Cargo.toml
crates/vanadium-oxide-codegen/src/: command.rs  lib.rs  main.rs
crates/vanadium-oxide-codegen/src/generate/: closure.rs  ext.rs  filter.rs  format.rs  mod.rs  recursive.rs  vec_entry.rs  visitor.rs
crates/vanadium-oxide-codegen/src/generate/chain/: children.rs
crates/vanadium-oxide-codegen/src/generate/ext/: with_val.rs
crates/vanadium-oxide-codegen/src/generate/format/: json.rs  stdout.rs
crates/vanadium-oxide-codegen/src/generate/format/json/: id.rs  name.rs  value_description.rs
crates/vanadium-oxide-codegen/src/generate/visitor/: dedup_by_pointer.rs  empty.rs  id.rs  passthrough.rs  table.rs  table_recursive.rs
crates/vanadium-oxide-lua/: Cargo.toml
crates/vanadium-oxide-lua/src/: lua.rs
lua/custom/configs/: lazy.lua
plugin/: keymaps.lua  options.lua  term_ui.lua  terminal.lua
src/: example.rs  iter_lua.rs  lib.rs
src/config/: keymap.rs  mod.rs
src/nvim/: keymap.rs
(+37 files in other folders)
