[package]
name = "vanadium-oxide-codegen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.97"
cargo_metadata = "0.19.2"
mlua-sys = { workspace = true, features = ["luajit"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
